Move up / move down sensor now works for the fancy plotter. Inspired by Robert Norton

BUG:66941

svn path=/trunk/KDE/kdebase/workspace/; revision=608877